fix: docs fixed (Mario)
